--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,24 @@
-on:
+  on:
     push:
       branches:
         - main
-name: 🚀 Deploy website on push
-jobs:
+  
+  name: 🚀 Deploy website on push
+  
+  jobs:
     web-deploy:
       name: 🎉 Deploy
       runs-on: ubuntu-latest
+  
       steps:
         - name: 🚚 Get latest code
           uses: actions/checkout@v2
+  
+        - name: 📦 Install dependencies
+          run: npm install
+  
+        - name: 🛠️ Build project
+          run: npm run build
   
         - name: 📂 Sync files
           uses: SamKirkland/FTP-Deploy-Action@4.0.0
@@ -17,4 +26,5 @@ jobs:
             server: ${{ secrets.ftp_host }}
             username: ${{ secrets.ftp_user }}
             password: ${{ secrets.ftp_password }}
+            local-dir: dist
             server-dir: public_html/
