--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@
             server: ${{ secrets.ftp_host }}
             username: ${{ secrets.ftp_user }}
             password: ${{ secrets.ftp_password }}
-            local-dir: dist
+            local-dir: dist/
             server-dir: public_html/
